# Editerako-App

./: .env  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Editerako.sln  Editerako.vcxproj  Editerako.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.MD  SYNTAX_HIGHLIGHTING_IMPROVEMENTS.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  chatwidget.cpp  chatwidget.h  cmake_install.cmake  codeeditor.cpp  codeeditor.h  filemanager.cpp  filemanager.h  finddialog.cpp  finddialog.h  gotolinedialog.cpp  gotolinedialog.h  main.cpp  main_simple.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_simple.cpp  mainwindow_simple.h  syntaxhighlighter.cpp  syntaxhighlighter.h  terminal.cpp  terminal.h  terminal.ui  test_syntax_highlighting.cpp  (+8 more)
.editerako/: chat_history.db
.github/workflows/: macos-build.yml
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Debug/: tree-sitter-cpp.lib  tree-sitter-html.lib
build_simple/: CMakeCache.txt  EditerakoSimple  Makefile  cmake_install.cmake
build_simple/EditerakoSimple_autogen/: deps  mocs_compilation.cpp
build_simple/EditerakoSimple_autogen/EWIEGA46WW/: moc_codeeditor.cpp  moc_codeeditor.cpp.d  moc_mainwindow_simple.cpp  moc_mainwindow_simple.cpp.d  moc_syntaxhighlighter.cpp.d
build_simple/tree-sitter-cpp_autogen/: deps
build_simple/tree-sitter-html_autogen/: deps
tree-sitter-cpp.dir/Debug/tree-sitter-cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
tree-sitter-html.dir/Debug/tree-sitter-html.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
tree-sitter.dir/Debug/tree-sitter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  tree-sitter.lastbuildstate
tree-sitter/tree-sitter-html/: CMakeLists.txt
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
